# magic-switcheroo

./: .gitignore  Cargo.toml  Makefile  README.md  README.rst
.github/workflows/: main.yml
hexbitbrushing/: Cargo.toml
hexbitbrushing/src/: lib.rs
src/: cli.rs  errors.rs  lib.rs  main.rs  ms.rs  p.rs
src/fs/: mod.rs
src/pad/: mod.rs
src/ram/: mod.rs  vecs.rs
