[package]
name = "magic-switcheroo"
version = "1.0.0"
edition = "2021"

authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]
license = "GPL-3.0-or-later"
description = "performs a magic number in the magic number of a file"
documentation = "https://docs.rs/magic-switcheroo"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/magic-switcheroo"

[dependencies]
ansi_term = { version = "0.12.1", features = ["derive_serde_style", "serde"] }
clap = { version = "4.3.2", features = ["derive", "cargo", "unicode", "env", "string"] }
crc = "3.0.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.97", features = ["preserve_order"] }

[[bin]]
name = "ms"
path = "src/main.rs"
bench = false

[lib]
name = "magic_switcheroo"
path = "src/lib.rs"

[dev-dependencies]
k9 = "0.11.6"
tempfile = "3.6.0"